--- a/MyNewApp/package.json
+++ b/MyNewApp/package.json
@@ -19,7 +19,9 @@
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0"
+    "react-native-screens": "~4.4.0",
+    "expo-linear-gradient": "~14.0.2",
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
